// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yaml parser parses a pattern with pattern-regex 1`] = `
{
  "errors": [],
  "explanations": [
    {
      "children": [],
      "loc": {
        "end": {
          "col": 30,
          "line": 6,
          "offset": 99,
        },
        "path": "test-rule-yaml.json",
        "start": {
          "col": 24,
          "line": 6,
          "offset": 93,
        },
      },
      "matches": [
        {
          "check_id": "test",
          "end": {
            "col": 4,
            "line": 1,
            "offset": 3,
          },
          "extra": {
            "engine_kind": "OSS",
            "message": "test",
            "metavars": {},
            "validation_state": "NO_VALIDATOR",
          },
          "path": "test.yaml",
          "start": {
            "col": 1,
            "line": 1,
            "offset": 0,
          },
        },
      ],
      "op": [
        "XPat",
        "^fo+",
      ],
    },
  ],
  "paths": {
    "scanned": [
      "test.yaml",
    ],
  },
  "results": [
    {
      "check_id": "test",
      "end": {
        "col": 4,
        "line": 1,
        "offset": 3,
      },
      "extra": {
        "engine_kind": "OSS",
        "fingerprint": "b6ba932ffd60cc34c6c6db6498d4c93e744ee6e74dfd056f2b2159e6ecb3762cec50ed049e7676a58f83d62c6167859c3bc7dbe0bea61ae73527f0500dbcd591_0",
        "is_ignored": false,
        "lines": "foo: bar",
        "message": "test",
        "metadata": {},
        "metavars": {},
        "severity": "ERROR",
        "validation_state": "NO_VALIDATOR",
      },
      "path": "test.yaml",
      "start": {
        "col": 1,
        "line": 1,
        "offset": 0,
      },
    },
  ],
  "skipped_rules": [],
  "version": "<MASKED>",
}
`;

exports[`yaml parser parses a simple pattern 1`] = `
{
  "errors": [],
  "explanations": [
    {
      "children": [],
      "loc": {
        "end": {
          "col": 27,
          "line": 6,
          "offset": 96,
        },
        "path": "test-rule-yaml.json",
        "start": {
          "col": 18,
          "line": 6,
          "offset": 87,
        },
      },
      "matches": [
        {
          "check_id": "test",
          "end": {
            "col": 9,
            "line": 1,
            "offset": 8,
          },
          "extra": {
            "engine_kind": "OSS",
            "message": "test",
            "metavars": {
              "$X": {
                "abstract_content": "bar",
                "end": {
                  "col": 9,
                  "line": 1,
                  "offset": 8,
                },
                "start": {
                  "col": 6,
                  "line": 1,
                  "offset": 5,
                },
              },
            },
            "validation_state": "NO_VALIDATOR",
          },
          "path": "test.yaml",
          "start": {
            "col": 1,
            "line": 1,
            "offset": 0,
          },
        },
      ],
      "op": [
        "XPat",
        "foo: $X",
      ],
    },
  ],
  "paths": {
    "scanned": [
      "test.yaml",
    ],
  },
  "results": [
    {
      "check_id": "test",
      "end": {
        "col": 9,
        "line": 1,
        "offset": 8,
      },
      "extra": {
        "engine_kind": "OSS",
        "fingerprint": "35874dfca3d0cc4d0d5251f2a293aeb00cd1f27307aef3f069025cbf3542493966f011fe42a15d75bbca998f83939e72380f462f58e84b67876c1e1fb60ea74a_0",
        "is_ignored": false,
        "lines": "foo: bar",
        "message": "test",
        "metadata": {},
        "metavars": {
          "$X": {
            "abstract_content": "bar",
            "end": {
              "col": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "col": 6,
              "line": 1,
              "offset": 5,
            },
          },
        },
        "severity": "ERROR",
        "validation_state": "NO_VALIDATOR",
      },
      "path": "test.yaml",
      "start": {
        "col": 1,
        "line": 1,
        "offset": 0,
      },
    },
  ],
  "skipped_rules": [],
  "version": "<MASKED>",
}
`;
